--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-sqlite-app-starter",
-  "version": "0.0.3",
-  "description": "Ionic/Angular SQLite Application Starter",
+  "name": "angular-data-storage-sqlite-app-starter",
+  "version": "0.0.1",
+  "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
   "homepage": "./",
@@ -29,7 +29,7 @@
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^5.0.0",
-    "@jeepq/capacitor": "0.0.3-1",
+    "@jeepq/capacitor": "0.0.3-2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -63,8 +63,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jepiqueau/angular-sqlite-app-starter.git"
+    "url": "https://github.com/jepiqueau/angular-data-storage-sqlite-app-starter.git"
   },
   "bugs": {
-    "url": "https://github.com/jepiqueau/angular-sqlite-app-starter.git/issues"
-  }}
+    "url": "https://github.com/jepiqueau/angular-data-storage-sqlite-app-starter.git/issues"
+  }
+}
