step back to capacitor-data-storage-sqlite

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
   "homepage": "./",
   "scripts": {
     "ng": "ng",
-    "update": "npm install --save @jeepq/capacitor@latest",
+    "update": "npm install --save capacitor-data-storage-sqlite@latest",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -27,7 +27,7 @@
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "^5.0.5",
-    "@jeepq/capacitor": "0.0.4-1",
+    "capacitor-data-storage-sqlite": "^1.5.1-1",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
