--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,12 +22,12 @@
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
-    "@capacitor/core": "^1.5.2",
+    "@capacitor/core": "^2.0.0",
     "@ionic-native/core": "latest",
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^1.5.3",
+    "capacitor-data-storage-sqlite": "^2.0.0-1",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
@@ -39,9 +39,9 @@
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@capacitor/android": "^1.5.2",
-    "@capacitor/cli": "^1.5.2",
-    "@capacitor/ios": "^1.5.2",
+    "@capacitor/android": "^2.0.0",
+    "@capacitor/cli": "^2.0.0",
+    "@capacitor/ios": "^2.0.0",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
