--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,12 +22,12 @@
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
-    "@capacitor/core": "^2.1.0",
+    "@capacitor/core": "^2.2.0",
     "@ionic-native/core": "latest",
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^2.1.0",
+    "capacitor-data-storage-sqlite": "^2.2.0",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
@@ -39,9 +39,9 @@
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@capacitor/android": "^2.1.0",
-    "@capacitor/cli": "^2.1.0",
-    "@capacitor/ios": "^2.1.0",
+    "@capacitor/android": "^2.2.0",
+    "@capacitor/cli": "^2.2.0",
+    "@capacitor/ios": "^2.2.0",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -50,17 +50,17 @@
     "fibers": "^4.0.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.9.2"
   },
   "repository": {
     "type": "git",
