--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,16 +22,17 @@
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
-    "@capacitor/core": "^2.2.0",
+    "@capacitor/android": "^2.3.0",
+    "@capacitor/core": "^2.3.0",
+    "@capacitor/ios": "^2.3.0",
     "@ionic-native/core": "latest",
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^2.2.0",
-    "core-js": "^3.6.4",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.1",
-    "zone.js": "^0.10.2"
+    "capacitor-data-storage-sqlite": "^2.3.0-1",
+    "rxjs": "latest",
+    "tslib": "latest",
+    "zone.js": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "latest",
@@ -39,28 +40,23 @@
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@capacitor/android": "^2.2.0",
-    "@capacitor/cli": "^2.2.0",
-    "@capacitor/ios": "^2.2.0",
+    "@capacitor/cli": "^2.3.0",
     "@ionic/angular-toolkit": "latest",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "fibers": "^4.0.2",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "node-sass": "^4.14.1",
-    "path": "^0.12.7",
-    "protractor": "^7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "^3.9.2"
+    "@types/jasmine": "latest",
+    "@types/jasminewd2": "latest",
+    "@types/node": "latest",
+    "codelyzer": "latest",
+    "jasmine-core": "latest",
+    "jasmine-spec-reporter": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-coverage-istanbul-reporter": "latest",
+    "karma-jasmine": "latest",
+    "karma-jasmine-html-reporter": "latest",
+    "protractor": "latest",
+    "ts-node": "latest",
+    "tslint": "latest",
+    "typescript": "^3.9.6"
   },
   "repository": {
     "type": "git",
