--- a/electron/.gitignore
+++ b/electron/.gitignore
@@ -1,7 +1,7 @@
 # NPM renames .gitignore to .npmignore
 # In order to prevent that, we remove the initial "."
 # And the CLI then renames it
-
-app/
-node_modules/
-DataStorage/
+app
+node_modules
+build
+dist
