--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,14 +22,15 @@
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
-    "@capacitor/android": "^2.3.0",
-    "@capacitor/core": "^2.3.0",
-    "@capacitor/ios": "^2.3.0",
+    "@capacitor-community/electron": "^1.2.3",
+    "@capacitor/android": "^2.4.2",
+    "@capacitor/core": "^2.4.2",
+    "@capacitor/ios": "^2.4.2",
     "@ionic-native/core": "latest",
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^2.3.0-1",
+    "capacitor-data-storage-sqlite": "^2.4.2-1",
     "rxjs": "latest",
     "tslib": "latest",
     "zone.js": "latest"
@@ -40,7 +41,7 @@
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@capacitor/cli": "^2.3.0",
+    "@capacitor/cli": "^2.4.2",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "latest",
     "@types/jasminewd2": "latest",
