--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,11 +4,16 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.d.ts"
   ],
   "exclude": [
-    "src/test.ts",
     "src/**/*.spec.ts"
   ]
+
 }
