--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^2.4.2-1",
+    "capacitor-data-storage-sqlite": "^2.4.2",
     "rxjs": "latest",
     "tslib": "latest",
     "zone.js": "latest"
