--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "1.0.8",
+  "version": "2.0.0-alpha.1",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -23,14 +23,15 @@
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
     "@capacitor-community/electron": "^1.4.0",
-    "@capacitor/android": "^2.4.7",
-    "@capacitor/core": "^2.4.7",
-    "@capacitor/ios": "^2.4.7",
+    "@capacitor/android": "next",
+    "@capacitor/core": "next",
+    "@capacitor/dialog": "^0.4.6",
+    "@capacitor/ios": "next",
     "@ionic-native/core": "latest",
     "@ionic-native/splash-screen": "latest",
     "@ionic-native/status-bar": "latest",
     "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^2.4.7",
+    "capacitor-data-storage-sqlite": "^3.0.0-alpha.1",
     "rxjs": "latest",
     "tslib": "latest",
     "zone.js": "latest"
@@ -41,7 +42,7 @@
     "@angular/compiler": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@capacitor/cli": "^2.4.7",
+    "@capacitor/cli": "next",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "latest",
     "@types/jasminewd2": "latest",
