--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -10,6 +10,7 @@ android {
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-dialog')
+    implementation project(':capacitor-toast')
     implementation project(':capacitor-data-storage-sqlite')
 
 }
