--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.0.0-alpha.6",
+  "version": "2.0.0-rc.2",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -16,49 +16,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "latest",
-    "@angular/core": "latest",
-    "@angular/forms": "latest",
-    "@angular/platform-browser": "latest",
-    "@angular/platform-browser-dynamic": "latest",
-    "@angular/router": "latest",
-    "@capacitor-community/electron": "^1.4.0",
-    "@capacitor/android": "next",
-    "@capacitor/core": "next",
-    "@capacitor/dialog": "^0.4.6",
-    "@capacitor/ios": "next",
-    "@ionic-native/core": "latest",
-    "@ionic-native/splash-screen": "latest",
-    "@ionic-native/status-bar": "latest",
-    "@ionic/angular": "latest",
-    "capacitor-data-storage-sqlite": "^3.0.0-alpha.6",
-    "rxjs": "latest",
-    "tslib": "latest",
-    "zone.js": "latest"
+    "@angular/common": "~12.0.1",
+    "@angular/core": "~12.0.1",
+    "@angular/forms": "~12.0.1",
+    "@angular/platform-browser": "~12.0.1",
+    "@angular/platform-browser-dynamic": "~12.0.1",
+    "@angular/router": "~12.0.1",
+    "@capacitor/android": "^3.0.0",
+    "@capacitor/core": "^3.0.0",
+    "@capacitor/dialog": "^1.0.0",
+    "@capacitor/ios": "^3.0.0",
+    "@capacitor/toast": "^1.0.0",
+    "@ionic/angular": "^5.5.2",
+    "capacitor-data-storage-sqlite": "^3.0.0-rc.2",
+    "localforage": "^1.9.0",
+    "rxjs": "~6.6.0",
+    "sql.js": "^1.5.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "latest",
-    "@angular/cli": "latest",
-    "@angular/compiler": "latest",
-    "@angular/compiler-cli": "latest",
-    "@angular/language-service": "latest",
-    "@capacitor/cli": "next",
-    "@ionic/angular-toolkit": "latest",
-    "@types/jasmine": "latest",
-    "@types/jasminewd2": "latest",
-    "@types/node": "latest",
-    "codelyzer": "latest",
-    "jasmine-core": "latest",
-    "jasmine-spec-reporter": "latest",
-    "karma": "latest",
-    "karma-chrome-launcher": "latest",
-    "karma-coverage-istanbul-reporter": "latest",
-    "karma-jasmine": "latest",
-    "karma-jasmine-html-reporter": "latest",
-    "protractor": "latest",
-    "ts-node": "latest",
-    "tslint": "latest",
-    "typescript": "^4.0.5"
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular-eslint/builder": "~12.0.0",
+    "@angular-eslint/eslint-plugin": "~12.0.0",
+    "@angular-eslint/eslint-plugin-template": "~12.0.0",
+    "@angular-eslint/template-parser": "~12.0.0",
+    "@angular/cli": "~12.0.1",
+    "@angular/compiler": "~12.0.1",
+    "@angular/compiler-cli": "~12.0.1",
+    "@angular/language-service": "~12.0.1",
+    "@capacitor-community/electron": "^3.0.0-rc.6",
+    "@capacitor/cli": "^3.0.0",
+    "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/sql.js": "^1.4.2",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "typescript": "~4.2.4"
   },
   "repository": {
     "type": "git",
