upd to capacitor-data-storage-sqlite@3.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@capacitor-community/electron": "^3.0.0-rc.6",
     "@capacitor/android": "^3.0.0",
     "@capacitor/core": "^3.0.0",
     "@capacitor/dialog": "^1.0.0",
     "@capacitor/ios": "^3.0.0",
     "@capacitor/toast": "^1.0.0",
     "@ionic/angular": "^5.5.2",
-    "capacitor-data-storage-sqlite": "^3.0.0-rc.2",
+    "capacitor-data-storage-sqlite": "^3.0.0",
     "localforage": "^1.9.0",
     "rxjs": "~6.6.0",
     "sql.js": "^1.5.0",
@@ -45,7 +46,6 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor-community/electron": "^3.0.0-rc.6",
     "@capacitor/cli": "^3.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/pwa-elements": "^3.0.2",
