--- a/electron/package.json
+++ b/electron/package.json
@@ -12,16 +12,18 @@
     "rebuild-deps": "electron-rebuild"
   },
   "dependencies": {
-    "@capacitor-community/electron": "^3.0.0-rc.6",
-    "capacitor-data-storage-sqlite": "^3.0.0",
+    "@capacitor-community/electron": "^3.0.0",
+    "capacitor-data-storage-sqlite": "^3.1.1",
+    "electron-is-dev": "~2.0.0",
+    "electron-serve": "~1.1.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/sqlite3": "^3.1.7",
-    "electron": "~12.0.8",
-    "electron-builder": "~22.9.1",
-    "electron-rebuild": "^2.3.5",
-    "typescript": "~4.0.5"
+    "electron": "~13.1.3",
+    "electron-builder": "~22.11.7",
+    "electron-rebuild": "~2.3.5",
+    "typescript": "~4.3.4"
   },
   "keywords": [
     "capacitor",
@@ -43,11 +45,11 @@
     "mac": {
       "category": "public.app-category.developer-tools",
       "target": "dmg",
-      "icon": "appIcon.png"
+      "icon": "assets/appIcon.png"
     },
     "win": {
       "target": "nsis",
-      "icon": "appIcon.ico"
+      "icon": "assets/appIcon.ico"
     }
   }
 }
