--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -22,17 +22,16 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "@capacitor-community/electron": "^3.0.0-rc.6",
-    "@capacitor/android": "^3.0.0",
-    "@capacitor/core": "^3.0.0",
-    "@capacitor/dialog": "^1.0.0",
-    "@capacitor/ios": "^3.0.0",
-    "@capacitor/toast": "^1.0.0",
+    "@capacitor-community/electron": "^3.0.1",
+    "@capacitor/android": "^3.1.1",
+    "@capacitor/core": "^3.1.1",
+    "@capacitor/dialog": "^1.0.2",
+    "@capacitor/ios": "^3.1.1",
+    "@capacitor/toast": "^1.0.2",
     "@ionic/angular": "^5.5.2",
-    "capacitor-data-storage-sqlite": "^3.0.0",
+    "capacitor-data-storage-sqlite": "^3.1.1",
     "localforage": "^1.9.0",
     "rxjs": "~6.6.0",
-    "sql.js": "^1.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -46,13 +45,12 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "^3.0.0",
+    "@capacitor/cli": "^3.1.1",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/pwa-elements": "^3.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@types/sql.js": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "crypto-browserify": "^3.12.0",
@@ -60,14 +58,14 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
