--- a/electron/package.json
+++ b/electron/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@capacitor-community/electron": "^3.0.0",
-    "capacitor-data-storage-sqlite": "^3.1.1",
+    "capacitor-data-storage-sqlite": "^3.2.0-2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
     "sqlite3": "^5.0.2"
