--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types"],
     "allowJs": true,
     "rootDir": "."
   }
