--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -16,49 +16,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~12.0.1",
-    "@angular/core": "~12.0.1",
-    "@angular/forms": "~12.0.1",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
-    "@capacitor-community/electron": "^3.0.1",
-    "@capacitor/android": "^3.1.1",
-    "@capacitor/core": "^3.1.1",
+    "@angular/common": "~12.2.2",
+    "@angular/core": "~12.2.2",
+    "@angular/forms": "~12.2.2",
+    "@angular/platform-browser": "~12.2.2",
+    "@angular/platform-browser-dynamic": "~12.2.2",
+    "@angular/router": "~12.2.2",
+    "@capacitor-community/electron": "^3.1.0",
+    "@capacitor/android": "^3.2.0",
+    "@capacitor/core": "^3.2.0",
     "@capacitor/dialog": "^1.0.2",
-    "@capacitor/ios": "^3.1.1",
+    "@capacitor/ios": "^3.2.0",
     "@capacitor/toast": "^1.0.2",
-    "@ionic/angular": "^5.5.2",
-    "capacitor-data-storage-sqlite": "^3.1.1",
+    "@ionic/angular": "^5.6.14",
+    "capacitor-data-storage-sqlite": "^3.2.0-2",
     "localforage": "^1.9.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular-eslint/builder": "~12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "^3.1.1",
+    "@angular-devkit/build-angular": "~12.2.2",
+    "@angular-eslint/builder": "~12.3.1",
+    "@angular-eslint/eslint-plugin": "~12.3.1",
+    "@angular-eslint/eslint-plugin-template": "~12.3.1",
+    "@angular-eslint/template-parser": "~12.3.1",
+    "@angular/cli": "~12.2.2",
+    "@angular/compiler": "~12.2.2",
+    "@angular/compiler-cli": "~12.2.2",
+    "@angular/language-service": "~12.2.2",
+    "@capacitor/cli": "^3.2.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/pwa-elements": "^3.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.7.1",
+    "@typescript-eslint/eslint-plugin": "4.29.2",
+    "@typescript-eslint/parser": "4.29.2",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "2.24.1",
+    "eslint-plugin-jsdoc": "36.0.7",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~3.9.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -67,8 +67,8 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "ts-node": "~10.2.1",
+    "typescript": "~4.3.5"
   },
   "repository": {
     "type": "git",
