--- a/electron/package.json
+++ b/electron/package.json
@@ -20,8 +20,8 @@
     "electron:make": "npm run build && electron-builder build -c ./electron-builder.config.json -p always"
   },
   "dependencies": {
-    "@capacitor-community/electron": "^4.0.3",
-    "capacitor-data-storage-sqlite": "^3.2.0-3",
+    "@capacitor-community/electron": "^4.0.1",
+    "capacitor-data-storage-sqlite": "^3.2.0",
     "chokidar": "~3.5.2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
