--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -29,7 +29,7 @@
     "@capacitor/ios": "^3.2.0",
     "@capacitor/toast": "^1.0.2",
     "@ionic/angular": "^5.6.14",
-    "capacitor-data-storage-sqlite": "^3.2.0-3",
+    "capacitor-data-storage-sqlite": "^3.2.0",
     "localforage": "^1.9.0",
     "rxjs": "~7.3.0",
     "tslib": "^2.3.1",
