--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -16,58 +16,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
-    "@capacitor-community/electron": "^4.0.3",
-    "@capacitor/android": "^3.3.4",
-    "@capacitor/core": "^3.3.4",
-    "@capacitor/dialog": "^1.0.6",
-    "@capacitor/ios": "^3.3.4",
-    "@capacitor/toast": "^1.0.6",
-    "@ionic/angular": "^6.0.1",
-    "capacitor-data-storage-sqlite": "^3.3.4",
-    "localforage": "^1.9.0",
+    "@angular/common": "~13.2.4",
+    "@angular/core": "~13.2.4",
+    "@angular/forms": "~13.2.4",
+    "@angular/platform-browser": "~13.2.4",
+    "@angular/platform-browser-dynamic": "~13.2.4",
+    "@angular/router": "~13.2.4",
+    "@capacitor-community/electron": "^4.1.0",
+    "@capacitor/android": "^3.4.3",
+    "@capacitor/core": "^3.4.3",
+    "@capacitor/dialog": "^1.0.7",
+    "@capacitor/ios": "^3.4.3",
+    "@capacitor/toast": "^1.0.8",
+    "@ionic/angular": "^6.0.9",
+    "capacitor-data-storage-sqlite": "^3.4.3",
+    "localforage": "^1.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.1",
-    "@angular/compiler": "~13.0.0",
-    "@angular/compiler-cli": "~13.0.0",
-    "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "^3.3.4",
-    "@ionic/angular-toolkit": "^5.0.0",
+    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular-eslint/builder": "~13.1.0",
+    "@angular-eslint/eslint-plugin": "~13.1.0",
+    "@angular-eslint/eslint-plugin-template": "~13.1.0",
+    "@angular-eslint/template-parser": "~13.1.0",
+    "@angular/cli": "~13.2.5",
+    "@angular/compiler": "~13.2.4",
+    "@angular/compiler-cli": "~13.2.4",
+    "@angular/language-service": "~13.2.4",
+    "@capacitor/cli": "^3.4.3",
+    "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
-    "@types/jasmine": "~3.8.2",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^16.7.1",
+    "@types/jasmine": "^3.6.0",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "crypto-browserify": "^3.12.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "2.24.1",
-    "eslint-plugin-jsdoc": "36.0.7",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~3.9.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.2.1",
+    "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
   "repository": {
