--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-data-storage-sqlite-app-starter",
-  "version": "2.3.2",
+  "version": "3.0.1",
   "description": "Ionic/Angular Data Storage SQLite Application Starter",
   "author": "Jean Pierre Quéau",
   "license": "MIT",
@@ -23,14 +23,14 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@capacitor-community/electron": "^4.1.0",
-    "@capacitor/android": "3.7.0",
-    "@capacitor/app": "^1.1.0",
-    "@capacitor/core": "3.7.0",
-    "@capacitor/dialog": "^1.0.7",
-    "@capacitor/ios": "3.7.0",
-    "@capacitor/toast": "^1.0.6",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/dialog": "^4.0.0",
+    "@capacitor/ios": "^4.0.0",
+    "@capacitor/toast": "^4.0.0",
     "@ionic/angular": "^6.0.9",
-    "capacitor-data-storage-sqlite": "^3.4.3",
+    "capacitor-data-storage-sqlite": "^4.0.1",
     "localforage": "^1.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
@@ -46,7 +46,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "3.7.0",
+    "@capacitor/cli": "^4.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
     "@types/jasmine": "^3.6.0",
